Frontend build attempt 1.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,5 +10,5 @@
  * argument is an `Html` object containing the body of the page.
  *@
 @main("Welcome to Play") {
-  <h1>Your message is: @message</h1>
+  <div id="root"></div>
 }
