--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,9 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)
+ @import controllers.WebpackAssets
+ @(title: String)(content: Html)
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,11 +15,12 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
     </body>
+    <script src="@routes.Assets.versioned(WebpackAssets.paths.user.js)" type="text/javascript"></script>
+
 </html>
